[package]
name = "sp-finality-tendermint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
] }
scale-info = { version = "2.0.0", default-features = false, features = [
  "derive",
] }
log = { version = "0.4", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.3.0", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.3.0" , default-features = false}
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.3.0" , default-features = false}
sp-keystore = { default-features = false, optional = true, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.3.0"}
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.3.0" }
sp-std = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.3.0" }

# Local Dependencies
finality-tendermint = { package = "finality-tendermint", version = "0.1.0", path = "../finality-tendermint",default-features = false, features = [
  "derive-codec",
] }

[features]
default = ["std"]
std = [
  "log",
  "serde",
  "codec/std",
  "scale-info/std",
  "finality-tendermint/std",
  "sp-api/std",
  "sp-application-crypto/std",
  "sp-core/std",
  "sp-keystore",
  "sp-runtime/std",
  "sp-std/std",
]